apps/mintpsicologia/templates/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mintpsicologia-external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    external-dns.kubernetes.io/enabled: "true"
    external-dns.kubernetes.io/target: mintpsicologia.es
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx-external
  rules:
    - host: mintpsicologia.es
      http:
        paths:
          - backend:
              service:
                name: mintpsicologia-wordpress
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - mintpsicologia.es
      secretName: mintpsicologia-external-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mintpsicologia-www-redirect
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    external-dns.kubernetes.io/enabled: "true"
    external-dns.kubernetes.io/target: mintpsicologia.es
    nginx.ingress.kubernetes.io/permanent-redirect: https://mintpsicologia.es$request_uri
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
spec:
  ingressClassName: nginx-external
  rules:
    - host: www.mintpsicologia.es
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mintpsicologia-wordpress
                port:
                  name: http
  tls:
    - hosts:
        - www.mintpsicologia.es
      secretName: mintpsicologia-www-external-tls
